<resources>
    <string name="app_name">SecureLoginz</string>
    <string name="please_login">Please login:</string>
    <string name="username">Username:</string>
    <string name="invalid_username">Invalid username</string>
    <string name="password">Password:</string>
    <string name="invalid_password">Invalid password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="please_register">Please Register:</string>
    <string name="first">First:</string>
    <string name="invalid_first_name">Invalid first name</string>
    <string name="last">Last:</string>
    <string name="invalid_last_name">Invalid last name</string>
    <string name="dob">DOB:</string>
    <string name="invalid_date_of_birth">Invalid date of birth</string>
    <string name="email">email:</string>
    <string name="invalid_email">invalid email</string>
    <string name="password_too_short">Password too short</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Confirm</string>
    <string name="_00_30">00:30</string>
    <string name="question_1_x">Question: 1/x</string>
    <string name="score_0">Score: 0</string>
    <string name="option4">option4</string>
    <string name="option3">option3</string>
    <string name="option2">option2</string>
    <string name="option1">option1</string>
    <string name="what_color_is_a_banana">What color is a banana?</string>
    <string name="play">Play</string>
    <string name="history">History</string>
    <string name="instructions">Instructions</string>
    <string name="to_play_select_the_answers_which_you_believe_sound_the_most_accurate_some_questions_have_multiple_answers">to play select the answers which you believe sound the most accurate.</string>
    <string name="understand">Understand</string>
    <string name="highschore_0">Highschore: 0</string>
    <string name="back">Back</string>

</resources>