<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginTextView"
        android:textSize="26sp"
        android:text="@string/please_login"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/usernameEditText"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/username"
        android:id="@+id/usernameTextView"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintTop_toBottomOf="@id/loginTextView"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:textColor="@color/Red"
        android:text="@string/invalid_username"
        android:id="@+id/usererrormsg"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="80dp"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/usernameTextView"
        app:layout_constraintBaseline_toBaselineOf="@id/usernameTextView" />

    <TextView
        android:text="@string/password"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/passwordTextView"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText" />
    <TextView
        android:textColor="@color/Red"
        android:text="@string/invalid_password"
        android:id="@+id/passworderrormsg"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="80dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/usernameEditText"
        app:layout_constraintBaseline_toBaselineOf="@id/passwordTextView" />

    <Button
        android:text="@string/login"
        android:id="@+id/button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        android:onClick="GotoLoginActivity"/>
</androidx.constraintlayout.widget.ConstraintLayout>